k8s/actors/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actors
  namespace: sa-p5
  labels:
    app: actors
    app.kubernetes.io/name: actors
    app.kubernetes.io/part-of: sa-p5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: actors
  template:
    metadata:
      labels:
        app: actors
        app.kubernetes.io/name: actors
        app.kubernetes.io/part-of: sa-p5
    spec:
      containers:
        - name: actors
          image: docker.io/zenthic22/actors:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
      imagePullSecrets:
        - name: regcred
