k8s/actors/allow-all-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-internal
  namespace: sa-p5
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
  ingress:
    - from:
        - podSelector: {}   # Permite tráfico interno entre pods del mismo namespace
  egress:
    - to:
        - podSelector: {}
